aggiunto bonus gioco "campo minato"

--- a/bonus/home.html
+++ b/bonus/home.html
@@ -4,24 +4,17 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link rel="stylesheet" href="style.css">
-        <title>Slider</title>
+        <title>Campo minato</title>
     </head>
     <body>
 
-
       <div class="container">
-
-        <div class="punteggio">
-          <p class="pverde">Punteggio verde: 0</p>
-          <p class="prossa">Punteggio rosso: 0</p>
-        </div>
-
         <div class="tablecontainer">
+          <a href="file:///Users/Luca/Desktop/Boolean%20Careers/%20js-jq-grigliaquadrati/bonus/home.html" class="restart">
+          <span>GAME OVER</span> RIPROVA
+        </a>
         </div>
-
       </div>
-
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="main.js"></script>
     </body>
